--- a/templates/home.html
+++ b/templates/home.html
@@ -8,26 +8,26 @@
    </head>
 <body>
   <nav>
-    <div class="menu">
-      <div class="logo">
-        <a href="home">UNIVERSTY SYSTEM</a>
-      </div>
-      <ul>
-        <li><a href="home">Home</a></li>
-        <li><a href="about">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Feedback</a></li>
-      </ul>
-    </div>
-  </nav>
+        <div class="menu">
+            <div class="logo">
+                <a href="home">UNIVERSTY SYSTEM</a>
+            </div>
+            <ul>
+                <li><a href="home">Home</a></li>
+                <li><a href="qrcode">Attendance</a></li>
+                <li><a href="login">Login</a></li>
+                <li><a href="contact">Contact</a></li>
+                <li><a href="register">Register</a></li>
+            </ul>
+        </div>
+    </nav>
   <div class="img">
     <img src="">
   </div>
   <div class="center">
     <div class="title">welcome to KSU UNIVERSTY SYSTEM</div>
     <div class="btns">
-      <button>Learn More</button>
+      <button href="">Learn More</button>
     </div>
   </div>
 </body>
