--- a/templates/login.html
+++ b/templates/login.html
@@ -1,37 +1,274 @@
-<!DOCTYPE html>
-<html>
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<html lang="en" dir="ltr">
 
-</head>
-
-<body>
-
+    <head>
+        <meta charset="UTF-8">
+    
+    
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
+    </head>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+        ::selection{
+        color: #0b2350;
+        background: #fff;
+    }
+    nav{
+  position: fixed;
+top: 0px;
+  background: #0b2350;
+  width: 100%;
+  padding: 10px 10px;
+  z-index: 12;
+}
+nav .menu{
+  max-width: 1250px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+.menu .logo a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 35px;
+  font-weight: 600;
+}
+.menu ul{
+  display: inline-flex;
+}
+.menu ul li{
+  list-style: none;
+  margin-left: 7px;
+}
+.menu ul li:first-child{
+    margin-left:0px ;
+}
+.menu ul li a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 15px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+.menu ul li a:hover{
+    background: #fff;
+    color: black;
+}  
+        body {
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            background: linear-gradient(135deg,#062568, #7d889c);
+        }
+        
+        .container {
+            max-width: 700px;
+            width: 100%;
+            background-color: #fff;
+            padding: 25px 30px;
+            border-radius: 5px;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+        }
+        
+        .container .title {
+            font-size: 25px;
+            font-weight: 500;
+            position: relative;
+        }
+        
+        .container .title::before {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            height: 3px;
+            width: 30px;
+            border-radius: 5px;
+            background: linear-gradient(135deg,#062568, #7d889c);
+        }
+        
+        .content form .user-details {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin: 20px 0 12px 0;
+        }
+        
+        form .user-details .input-box {
+            margin-bottom: 15px;
+        }
+        
+        form .input-box span.details {
+            display: block;
+            font-weight: 500;
+            margin-bottom: 5px;
+        }
+        
+        .user-details .input-box input {
+            height: 45px;
+            width: 640px;
+            outline: none;
+            font-size: 16px;
+            border-radius: 5px;
+            padding-left: 15px;
+            border: 1px solid #ccc;
+            border-bottom-width: 2px;
+            transition: all 0.3s ease;
+        }
+        
+        .user-details .input-box input:focus,
+        .user-details .input-box input:valid {
+            border-color: #2e2731;
+        }
+        
+        form .gender-details .gender-title {
+            font-size: 20px;
+            font-weight: 500;
+        }
+        
+        form .category {
+            display: flex;
+            width: 80%;
+            margin: 14px 0;
+            justify-content: space-between;
+        }
+        
+        form .category label {
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+        }
+        
+        form .category label .dot {
+            height: 18px;
+            width: 18px;
+            border-radius: 50%;
+            margin-right: 10px;
+            background: #d9d9d9;
+            border: 5px solid transparent;
+            transition: all 0.3s ease;
+        }
+        
+        #dot-1:checked~.category label .one,
+        #dot-2:checked~.category label .two,
+        #dot-3:checked~.category label .three {
+            background: #909396;
+            border-color: #2e2731;
+        }
+        
+        form input[type="radio"] {
+            display: none;
+        }
+        
+        form .button {
+            height: 45px;
+            margin: 35px 0
+        }
+        
+        form .button input {
+            height: 100%;
+            width: 100%;
+            border-radius: 5px;
+            border: none;
+            color: #fff;
+            font-size: 18px;
+            font-weight: 500;
+            letter-spacing: 1px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            background: linear-gradient(135deg, #062568, #7d889c);
+        }
+        
+        form .button input:hover {
+            /* transform: scale(0.99); */
+            background: linear-gradient(-135deg, #062568, #7d889c);
+        }
+        
+        @media(max-width: 584px) {
+            .container {
+                max-width: 100%;
+            }
+            form .user-details .input-box {
+                margin-bottom: 15px;
+                width: 100%;
+            }
+            form .category {
+                width: 100%;
+            }
+            .content form .user-details {
+                max-height: 300px;
+                overflow-y: scroll;
+            }
+            .user-details::-webkit-scrollbar {
+                width: 5px;
+            }
+        }
+        
+        @media(max-width: 459px) {
+            .container .content .category {
+                flex-direction: column;
+            }
+        }
+    
+    </style>
+    
+    <body>
+        <nav>
+        <div class="menu">
+          <div class="logo">
+            <a href="{% url 'home'%}">UNIVERSTY SYSTEM</a>
+          </div>
+          <ul>
+            <li><a href="{% url 'home'%}">Home</a></li>
+            <li><a href="{% url 'qrcode'%}">Attendance</a></li>
+            <li><a href="{% url 'login'%}">Login</a></li>
+            <li><a href="{% url 'contact'%}">Contact</a></li>
+            <li><a href="{% url 'register'%}">Register</a></li>
+          </ul>
+        </div>
+      </nav>
+    
     <div class="container">
-
-        <h2>Login Form</h2>
-
-        <div class="form-group">
-            <label for="inputEmail">Email</label>
-            <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+    
+        <div class="title">Login</div>
+        <div class="content">
+            <form action="/register/" method="post" class="action">
+                <div class="user-details">
+                    <div class="input-box">
+                        <span class="details">Email</span>
+                        <input type="email" placeholder="Enter your email" name="email" required>
+                    </div>
+    
+                    <div class="input-box">
+                        <span class="details">Password</span>
+                        <input type="text" placeholder="Enter your password" name="password" required>
+                    </div>
+    
+                </div>
+    
+    
+                <div class="button">
+                    <input type="submit" value="Login">
+                </div>
+            </form>
         </div>
-        <div class="form-group">
-            <label for="inputPassword">Password</label>
-            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-        </div>
-        <div class="form-group">
-            <label class="form-check-label"><input type="checkbox"> Remember me</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Sign in</button>
-        </form>
     </div>
-
-</body>
-
-</html>
-</div>
+    
+    </body>
+    
+    </html>
