--- a/templates/home.html
+++ b/templates/home.html
@@ -25,9 +25,9 @@
     <img src="">
   </div>
   <div class="center">
-    <div class="title">welcome to KSU UNIVERSTY SYSTEM</div>
+    <div class="title">Welcome to KSU UNIVERSTY SYSTEM</div>
     <div class="btns">
-      <button href="">Learn More</button>
+      <a href="https://kfs.edu.eg/computers/archieve.aspx"><button>  Learn More</button></a>
     </div>
   </div>
 </body>
