--- a/templates/contact.html
+++ b/templates/contact.html
@@ -36,37 +36,10 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="home">Faculty of Computers and Information</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="login">logIn</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="register">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 
 
-</html>
+
+
 <dev class="container">
     <form action="/contact" method="post" class="action">
         {% csrf_token %}
@@ -80,7 +53,7 @@
             <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
         </div>
         <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+            <label class="form-label">Message</label>
             <textarea class="form-control" id="message" name="message" placeholder="enter your message  " rows="3"></textarea>
             <button type="submit" class="btn btn-success my-3">Send</button>
 
