--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,17 @@
+{% block body %}
 
 <html lang="en" dir="ltr">
 
-    <head>
-        <meta charset="UTF-8">
-    
-    
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
-    </head>
-    <style>
+<head>
+    <meta charset="UTF-8">
+
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+</head>
+<style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
         * {
             margin: 0;
@@ -66,7 +67,7 @@ nav .menu{
 .menu ul li a:hover{
     background: #fff;
     color: black;
-}  
+}
         body {
             height: 100vh;
             display: flex;
@@ -75,7 +76,7 @@ nav .menu{
             padding: 10px;
             background: linear-gradient(135deg,#062568, #7d889c);
         }
-        
+
         .container {
             max-width: 700px;
             width: 100%;
@@ -84,13 +85,13 @@ nav .menu{
             border-radius: 5px;
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
         }
-        
+
         .container .title {
             font-size: 25px;
             font-weight: 500;
             position: relative;
         }
-        
+
         .container .title::before {
             content: "";
             position: absolute;
@@ -101,24 +102,24 @@ nav .menu{
             border-radius: 5px;
             background: linear-gradient(135deg,#062568, #7d889c);
         }
-        
+
         .content form .user-details {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
             margin: 20px 0 12px 0;
         }
-        
+
         form .user-details .input-box {
             margin-bottom: 15px;
         }
-        
+
         form .input-box span.details {
             display: block;
             font-weight: 500;
             margin-bottom: 5px;
         }
-        
+
         .user-details .input-box input {
             height: 45px;
             width: 640px;
@@ -130,30 +131,30 @@ nav .menu{
             border-bottom-width: 2px;
             transition: all 0.3s ease;
         }
-        
+
         .user-details .input-box input:focus,
         .user-details .input-box input:valid {
             border-color: #2e2731;
         }
-        
+
         form .gender-details .gender-title {
             font-size: 20px;
             font-weight: 500;
         }
-        
+
         form .category {
             display: flex;
             width: 80%;
             margin: 14px 0;
             justify-content: space-between;
         }
-        
+
         form .category label {
             display: flex;
             align-items: center;
             cursor: pointer;
         }
-        
+
         form .category label .dot {
             height: 18px;
             width: 18px;
@@ -163,23 +164,23 @@ nav .menu{
             border: 5px solid transparent;
             transition: all 0.3s ease;
         }
-        
+
         #dot-1:checked~.category label .one,
         #dot-2:checked~.category label .two,
         #dot-3:checked~.category label .three {
             background: #909396;
             border-color: #2e2731;
         }
-        
+
         form input[type="radio"] {
             display: none;
         }
-        
+
         form .button {
             height: 45px;
             margin: 35px 0
         }
-        
+
         form .button input {
             height: 100%;
             width: 100%;
@@ -193,12 +194,12 @@ nav .menu{
             transition: all 0.3s ease;
             background: linear-gradient(135deg, #062568, #7d889c);
         }
-        
+
         form .button input:hover {
             /* transform: scale(0.99); */
             background: linear-gradient(-135deg, #062568, #7d889c);
         }
-        
+
         @media(max-width: 584px) {
             .container {
                 max-width: 100%;
@@ -218,57 +219,61 @@ nav .menu{
                 width: 5px;
             }
         }
-        
+
         @media(max-width: 459px) {
             .container .content .category {
                 flex-direction: column;
             }
         }
-    
-    </style>
-    
-    <body>
-        <nav>
-        <div class="menu">
-          <div class="logo">
+
+
+</style>
+
+<body>
+<nav>
+    <div class="menu">
+        <div class="logo">
             <a href="{% url 'home'%}">UNIVERSTY SYSTEM</a>
-          </div>
-          <ul>
+        </div>
+        <ul>
             <li><a href="{% url 'home'%}">Home</a></li>
             <li><a href="{% url 'qrcode'%}">Attendance</a></li>
             <li><a href="{% url 'login'%}">Login</a></li>
             <li><a href="{% url 'contact'%}">Contact</a></li>
             <li><a href="{% url 'register'%}">Register</a></li>
-          </ul>
-        </div>
-      </nav>
-    
-    <div class="container">
-    
-        <div class="title">Login</div>
-        <div class="content">
-            <form action="/register/" method="post" class="action">
+        </ul>
+    </div>
+</nav>
+
+<div class="container">
+
+    <div class="title">Login</div>
+
+<div class="content">
+            <form action="{% url 'userprofile' %}" method="post" class="action">
+                {% csrf_token %}
                 <div class="user-details">
                     <div class="input-box">
                         <span class="details">Email</span>
                         <input type="email" placeholder="Enter your email" name="email" required>
                     </div>
-    
+
                     <div class="input-box">
                         <span class="details">Password</span>
-                        <input type="text" placeholder="Enter your password" name="password" required>
+                        <input type="password" placeholder="Enter your password" name="password" required>
                     </div>
-    
+
                 </div>
-    
-    
+
+
                 <div class="button">
                     <input type="submit" value="Login">
                 </div>
+
             </form>
-        </div>
-    </div>
-    
-    </body>
-    
-    </html>
+</div>
+</div>
+</body>
+
+</html>
+{% endblock body%}
