--- a/templates/register.html
+++ b/templates/register.html
@@ -243,30 +243,45 @@ nav .menu{
     </div>
 </nav>
 <div class="container">
-    <div class="title">Registration</div>
-    <div class="content">
+        <div class="title">Registration</div>
+        <div class="content">
+            <form action="/register/" method="post" class="action">
+                {% csrf_token %}
+                <div class="user-details">
+                    <div class="input-box">
+                        <span class="details">Full Name</span>
+                        {{form.full_name}}
+                    </div>
+                    <div class="input-box">
+                        <span class="details">Username</span>
+                        {{form.username}}
+                    </div>
+                    <div class="input-box">
+                        <span class="details">Email</span>
+                        {{form.email}}
+                    </div>
+                    <div class="input-box">
+                        <span class="details">Phone Number</span>
+                        {{form.phone}}
+                    </div>
+                    <div class="input-box">
+                        <span class="details">Password</span>
+                        {{form.password1}}
+                    </div>
+                    <div class="input-box">
+                        <span class="details">Confirm Password</span>
+                        {{form.password2}}
+                    </div>
 
-        <h3>Register here</h3>
-        <hr>
+                </div>
 
-        <form action="" method="POST">
-            {% csrf_token %}
-
-            {% for field in form %}
-            <div>
-                <p>{{ field.label }}: <br> {{ field }}</p>
-
-                {% for error in field.errors %}
-                <small style="color: red">{{ error }}</small>
-                {% endfor %}
-            </div>
-            {% endfor %}
-            <div class="button">
-                <button type="submit">Register</button>
-            </div>
-        </form>
+                <div class="button">
+                    <input type="submit" value="Register">
+                </div>
+            </form>
+        </div>
+    {{form.errors}}
     </div>
-</div>
 
 </body>
 
